<resources>
    <string name="app_name">BaseApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="science">science</string>
    <string name="novel">novel</string>
    <string name="kid">kid</string>
    <string name="author_s">Author: %s</string>
    <string name="publication_date_s">Publication date: %s</string>
    <string name="my_books">My books</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="name_s">Name: %s</string>
    <string name="back">back</string>
    <string name="done">done</string>
    <string name="name_book">Name book</string>
    <string name="dateTime">Publication date</string>
    <string name="name_author">Name author</string>
    <string name="cannot_blank">Fields cannot be left blank</string>
    <string name="update_fail">Update book fail</string>
    <string name="my_player">My players</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="gender_s">Gender: %s</string>
    <string name="birthday_s">Birthday: %s</string>
    <string name="striker">Striker</string>
    <string name="name_player">Name player</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="must_choose_position">Must choose position</string>
    <string name="birthday_fail">Invalid date of birth</string>
</resources>