<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_book"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="@color/ColorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp">

        <ImageView
            android:id="@+id/iv_avt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/ic_women"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_avt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <CheckBox
            android:id="@+id/cb_defender"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:enabled="false"
            android:text="@string/defender"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_midfielder"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:enabled="false"
            android:text="@string/midfielder"
            app:layout_constraintStart_toStartOf="@id/cb_defender"
            app:layout_constraintTop_toBottomOf="@id/cb_defender" />

        <CheckBox
            android:id="@+id/cb_striker"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:enabled="false"
            android:text="@string/striker"
            app:layout_constraintStart_toStartOf="@id/cb_defender"
            app:layout_constraintTop_toBottomOf="@+id/cb_midfielder" />


        <TextView
            android:id="@+id/tv_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/birthday_s"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cb_defender"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>